user route in code+ swagger: getinfo, login,register, update
