# routes/user.js
@@ -1,90 +1,130 @@
 const express = require('express');
-const req = require('express/lib/request');
-const res = require('express/lib/response');
 const router = express.Router()
-const jwt = require('jsonwebtoken');
-var bcrypt = require("bcryptjs");
+var bcrypt = require("bcrypt");
 const UserSchema = require('../models/user');
-const { remove } = require('../models/user');
+const {verify_token,generateAccessToken}  = require('../middleware/jwt');
 
-function generateAccessToken(email) {
-  return jwt.sign({email: email}, process.env.TOKEN_SECRET, { expiresIn: '1800m' });
-}
 
-function validate_token(req,res,next){
-  let token = req.headers['authorization'];
-  if (!token) {
-    return res.status(403).send({ message: "No token provided!" });
-  }
-  jwt.verify(token, process.env.TOKEN_SECRET, (err, decoded) => {
-    if (err || req.params.id !== decoded.email) {
-      return res.status(401).send({ message: "Unauthorized!" });
-    }
-    next();
-  });
-}
-
-async function userExist(email) {
-  flag = true
-  console.log(await UserSchema.findOne({ 'email': email}))
-  if(await UserSchema.findOne({ 'email': email}) === null){
-    flag = false
-  }
-  return flag;
-}
-
-router.post('/register', async(req, res) => {
-  try {
-    if(await userExist(req.body.email) === true){
-        res.json({msg:"User alrady exist!"})
-    }
-    user = new UserSchema({ ...req.body});
-    user.validateSync();
-    user.password = bcrypt.hashSync(user.password, 8);
-    user.save()
-    res.json({msg:"User was registered successfully!",token:generateAccessToken(user.email)});
-  } catch (error) {
-      res.status(400).json({msg:"format is not good"})
-  }
-});
-
-router.post('/login', async (req, res) => {
-  var user = await UserSchema.findOne({ 'email': req.body.email})
-  .exec((err, user) => {
+router.post('/register', (req, res) => {
+  const newUser = new UserSchema({
+    email: req.body.email,
+    firstName: req.body.firstName,
+    lastName: req.body.lastName,
+    password: bcrypt.hashSync(req.body.password, 10),
+    phone: req.body.phone,
+  })
+  
+  newUser.save(err => {
     if (err) {
-      res.status(500).send({ message: "Unexpected error." });
-      return;
+      return res.status(400).json({
+        title: 'Error',
+        body: { 
+          msg: 'Email in use'
+        }
+      })
     }
-    if (!user) {
-      return res.status(404).send({ message: "Invalid username/password supplied." });
-    }
-
-    var passwordIsValid = bcrypt.compareSync(
-      req.body.password,
-      user.password
-    );
-    if (!passwordIsValid) {
-      return res.status(401).send({ message: "Invalid username/password supplied." });
-    }
-    res.json({jwt: generateAccessToken(user.email)});
-  });
-})
-
-router.get('/:id',validate_token,async (req, res) =>{
-  var user = await UserSchema.findOne({ 'email': req.params.id})
-  res.json({
-    firstName:user.firstName,
-    lastName: user.lastName,
-    email:user.email,
-    phone:user.phone
+    return res.status(200).json({
+        title: 'Status',
+        body:{
+          msg: 'Register complete',
+          jwt: generateAccessToken(newUser._id)
+        },
+    })
   })
 })
 
-router.put('/:id',validate_token,async (req, res) =>{
-  var user_db = await UserSchema.findOne({ 'email': req.params.id})
-  
+router.post('/login', async (req, res) => {
+    UserSchema.findOne({ email: req.body.email }, (err, user) => {
+      if (err) return res.status(500).json({
+        title: 'Error',
+        body:{
+          msg: err
+        }
+        
+      })
+      if (!user) {
+        return res.status(401).json({
+          title: 'Error - user not found',
+          body:{
+            msg: 'invalid credentials'
+          }
+        })
+      }
+      //incorrect password
+      if (!bcrypt.compareSync(req.body.password, user.password)) {
+        return res.status(401).json({
+          tite: 'Error - login failed',
+          body:{
+            msg: 'invalid credentials'
+          }
+        })
+      }
+      return res.status(200).json({
+        title: 'Status',
+        body:{
+          msg: 'Login complete',
+          jwt: generateAccessToken(user._id)
+        },
+    })
+  })
+})
 
+router.get('/',verify_token, (req, res) =>{
+  UserSchema.findOne({_id: req.token_payload._id}, (err, user) => {
+    if (err) return res.status(500).json({
+      title: 'Error',
+      body:{
+        msg: err
+      }
+    })
+    return res.status(200).json({
+      title: 'User information',
+      body:{
+        user: {
+          email: user.email,
+          firstName: user.firstName,
+          lastName: user.lastName,
+          phone: user.phone
+        }
+      }
+    })
+  })
+})
 
+router.put('/',verify_token, (req, res) =>{
+  UserSchema.findOne({_id: req.token_payload._id}, (err, user) => {
+    if (err) return res.status(500).json({
+      title: 'Error',
+      body:{
+        msg: err
+      }
+    })
+    user.email = req.body.email
+    user.firstName = req.body.firstName
+    user.password = bcrypt.hashSync(req.body.password, 10)
+    user.phone = req.body.phone
+    
+    user.save(err => {
+      if (err) {
+        return res.status(400).json({
+          title: 'Error',
+          body: { 
+            msg: err
+          }
+        })
+      }
+      return res.status(200).json({
+          title: 'Status',
+          body:{
+            msg: 'User was update'
+          },
+      })
+    })
+  })
+})
 
+router.delete('/',verify_token, (req, res) =>{
+// TODO: delete account
+// TODO: add this route to swagger
 })
 module.exports = router
