# swagger.json
@@ -165,10 +165,10 @@
           {
             "name": "body",
             "in": "body",
-            "description": "The user name for login",
+            "description": "Register new user",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/UserRegister"
             }
           }
         ],
@@ -176,11 +176,14 @@
           "200": {
             "description": "successful operation",
             "schema": {
-              "type": "string"
+              "$ref": "#/definitions/UserRegisterResponse"
             }
           },
           "400": {
-            "description": "Invalid username/password supplied"
+            "description": "Invalid parameters supplied.",
+            "schema": {
+              "$ref": "#/definitions/UserRegisterResponseError"
+            }
           }
         }
       }
@@ -199,10 +202,10 @@
           {
             "name": "body",
             "in": "body",
-            "description": "The user name for login",
+            "description": "Login credentieal",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/UserLogin"
             }
           }
         ],
@@ -210,31 +213,34 @@
           "200": {
             "description": "successful operation",
             "schema": {
-              "type": "string"
+              "$ref": "#/definitions/UserRegisterResponse"
             }
           },
           "400": {
-            "description": "Invalid username/password supplied"
+            "description": "Invalid parameters supplied.",
+            "schema": {
+              "$ref": "#/definitions/UserRegisterResponseError"
+            }
           }
         }
       }
     },
-    "/user/{id}": {
+    "/user/": {
       "get": {
         "tags": [
           "user"
         ],
-        "summary": "Get user by user name",
+        "summary": "Get user information",
         "description": "",
-        "operationId": "getUserById",
+        "operationId": "getUser",
         "produces": [
           "application/json"
         ],
         "parameters": [
           {
-            "name": "id",
-            "in": "path",
-            "description": "The id is email account.",
+            "name": "Authorization",
+            "in": "header",
+            "description": "Bearer Authentication",
             "required": true,
             "type": "string"
           }
@@ -243,14 +249,14 @@
           "200": {
             "description": "successful operation",
             "schema": {
-              "$ref": "#/definitions/UserWithoutPassword"
+              "$ref": "#/definitions/UserInfoResponse"
             }
           },
           "400": {
-            "description": "Invalid username supplied"
-          },
-          "404": {
-            "description": "User not found"
+            "description": "Unaccepted Error",
+            "schema": {
+              "$ref": "#/definitions/UserRegisterResponseError"
+            }
           }
         }
       },
@@ -266,9 +272,9 @@
         ],
         "parameters": [
           {
-            "name": "id",
-            "in": "path",
-            "description": "name that need to be updated",
+            "name": "Authorization",
+            "in": "header",
+            "description": "Bearer Authentication",
             "required": true,
             "type": "string"
           },
@@ -278,45 +284,16 @@
             "description": "Updated user object",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/UserUpdate"
             }
           }
         ],
         "responses": {
-          "400": {
-            "description": "Invalid user supplied"
-          },
-          "404": {
-            "description": "User not found"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Delete user",
-        "description": "This can only be done by the logged in user.",
-        "operationId": "deleteUser",
-        "produces": [
-          "application/xml",
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "The name that needs to be deleted",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Invalid username supplied"
-          },
-          "404": {
-            "description": "User not found"
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/UserRegisterResponseError"
+            }
           }
         }
       }
@@ -540,7 +517,7 @@
         }
       }
     },
-    "UserWithoutPassword": {
+    "UserRegister": {
       "type": "object",
       "properties": {
         "firstName": {
@@ -554,6 +531,122 @@
         },
         "phone": {
           "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "UserLogin": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "UserInfo": {
+      "type": "object",
+      "properties": {
+        "firstName": {
+          "type": "string"
+        },
+        "lastName": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "phone": {
+          "type": "string"
+        }
+      }
+    },
+    "UserUpdate": {
+      "type": "object",
+      "properties": {
+        "firstName": {
+          "type": "string"
+        },
+        "lastName": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "phone": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "UserRegisterResponse": {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string"
+        },
+        "body": {
+          "type": "object",
+          "properties": {
+            "msg": {
+              "type": "string"
+            },
+            "jwt": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
+    "UserRegisterResponseError": {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string"
+        },
+        "body": {
+          "type": "object",
+          "properties": {
+            "msg": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
+    "UserInfoResponse": {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string"
+        },
+        "body": {
+          "type": "object",
+          "properties": {
+            "msg": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string"
+                },
+                "lastName": {
+                  "type": "string"
+                },
+                "email": {
+                  "type": "string"
+                },
+                "phone": {
+                  "type": "string"
+                }
+              }
+            }
+          }
         }
       }
     }
